--- a/frontend/views/provider/profile.html
+++ b/frontend/views/provider/profile.html
@@ -85,9 +85,9 @@
                         </div>
                             </div>
                         </div>
-                        <div class="flex items-center justify-end bg-gray-50 px-4 py-3 text-end shadow sm:rounded-bl-md sm:rounded-br-md sm:px-6"><button type="submit"
+                        <div class="flex items-center justify-end bg-gray-50 px-4 py-3 text-end shadow sm:rounded-bl-md sm:rounded-br-md sm:px-6"><a href="/frontend/views/provider/registration.html" type="submit"
                                 class="inline-flex items-center rounded-md border border-transparent bg-indigo-500 px-4 py-2 text-sm font-medium tracking-wide text-white transition hover:bg-indigo-600 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 focus:ring-offset-gray-50 disabled:opacity-50">
-                                Edit Details </button>
+                                Edit Details </a>
                         </div>
                     </form>
                 </div>
